--- a/index.html
+++ b/index.html
@@ -17,18 +17,20 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-</head> 
+</head>
 
 <body>
     <div class="header x--bb x--ph">
         View Name
     </div>
     <div class="container">
-
-        <div class="starter-template">
-            <h1>Bootstrap starter template</h1>
-            <p class="lead">Use this document as a way to quickly start any new project.
-                <br> All you get is this text and a mostly barebones HTML document.</p>
+        <div class="x--pv">
+            <div class="btn btn-primary btn-lg full-width x--mb">
+                PC Akropolis
+            </div>
+            <div class="btn btn-primary btn-lg full-width x--mb">
+                Panorama
+            </div>
         </div>
 
     </div>
