--- a/login.html
+++ b/login.html
@@ -22,25 +22,31 @@
   <body>
 
     <div class="container">
-      <form class="form-signin">
-        <h2 class="form-signin-heading">Prisijungimas parduotuvėms</h2>
-        <hr/>
-
-        <label for="login" class="sr-only">Prisijungimo vardas</label>
-        <input type="input" id="login" class="form-control" placeholder="Prisijungimo vardas" required="" autofocus="">
         <br/>
 
-        <label for="inputPassword" class="sr-only">Slaptažodis</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Slaptažodis" required="">
+        <div class="btn-group" role="group" aria-label="Atgal">
+            <button type="button" class="btn btn-default">« Atgal</button>
+        </div>
 
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" value="remember-me"> Prisiminti mane
-          </label>
+        <form class="form-signin">
+            <h2 class="form-signin-heading">Prisijungimas parduotuvėms</h2>
+            <hr/>
+
+            <label for="login" class="sr-only">Prisijungimo vardas</label>
+            <input type="input" id="login" class="form-control" placeholder="Prisijungimo vardas" required="" autofocus="">
+            <br/>
+
+            <label for="inputPassword" class="sr-only">Slaptažodis</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Slaptažodis" required="">
+
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" value="remember-me"> Prisiminti mane
+            </label>
         </div>
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Prisijungti</button>
-      </form>
+    </form>
 </div>
 
 
