--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
             <div class="btn btn-primary btn-lg full-width x--mb">
                 Panorama
             </div>
+            <div class="btn btn-primary btn-lg full-width x--mb">
+                Europa
+            </div>
+            <div class="btn btn-success btn-lg full-width x--mb" id="load_home">
+                Prisijungimas
+            </div>
         </div>
 
     </div>
@@ -40,6 +46,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+
+    <script type="text/javascript">
+
+            $(document).ready(function() {
+                $("#load_home").on("click", function() {
+                    window.location.href = "login.html"
+                });
+            });
+    </script>
 </body>
 
 </html>
