--- a/navigate.html
+++ b/navigate.html
@@ -17,26 +17,6 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-    <style>
-    .Flexible-container {
-        position: relative;
-        padding-bottom: 56.25%;
-        padding-top: 30px;
-        height: 0;
-        overflow: hidden;
-    }
-
-    .Flexible-container iframe,   
-    .Flexible-container object,  
-    .Flexible-container embed {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
-    </style>
 </head>
 
 <body>
@@ -52,7 +32,7 @@
         <h2 class="form-signin-heading">Navigacija - Akropolis</h2>
         <hr/>
 
-        <div class="Flexible-container">
+        <div class="flexible-container">
 
 
             <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="645" height="443" src="https://maps.google.com/maps?hl=en&q=Ozo g. 25&ie=UTF8&t=roadmap&z=12&iwloc=B&output=embed">
