--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <div class="header x--bb x--ph">
-        View Name
+        Yzy Shop
     </div>
     <div class="container">
         <div class="x--pv">
@@ -34,11 +34,14 @@
             <div class="btn btn-primary btn-lg full-width x--mb">
                 Europa
             </div>
-            <div class="btn btn-success btn-lg full-width x--mb" id="load_home">
-                Prisijungimas
-            </div>
         </div>
 
+
+    </div>
+    <div class="footer x--bt">
+        <div class="btn btn-success btn-lg full-width" id="load_home">
+            Prisijungimas
+        </div>
     </div>
     <!-- /.container -->
 
