--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
     <div class="container">
         <br/>
 
-        <div class="btn-group" role="group" aria-label="Atgal">
+        <div class="btn-group" role="group" aria-label="Atgal" onclick="window.location.href = 'index.html'">
             <button type="button" class="btn btn-default">« Atgal</button>
         </div>
 
