--- a/detailed-search.html
+++ b/detailed-search.html
@@ -20,30 +20,91 @@
 </head>
 
 <body>
-
-    <div class="container">
-        <h2>Akropolis</h2>
-        <form>
-            <div class="form-group">
-                <input type="text" class="form-control" id="search-keyword" placeholder="Įveskite paieškos frazę...">
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-default full-width x--pv">
-                    Ieškoti
-                </button>
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-default full-width x--pv">
-                    Detali paieška
-                </button>
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-default full-width x--pv">
-                    Žemėlapis
-                </button>
-            </div>
-        </form>
+<div class="container">
+<br/>
+<div class="btn-group" role="group" aria-label="Atgal">
+    <button type="button" class="btn btn-default">« Atgal</button>
+</div>
+<h2>Detali paieška</h2>
+<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingOne">
+      <h4 class="panel-title">
+        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Kategorija</a>
+      </h4>
     </div>
+    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+      <div class="panel-body">
+        <div class="btn-group">
+          <button type="button" class="btn btn-default btn-md btn-block">Rūbai</button>
+          <button type="button" class="btn btn-default btn-md btn-block">Maistas</button>
+          <button type="button" class="btn btn-default btn-md btn-block">Galanterija</button>
+          <button type="button" class="btn btn-default btn-md btn-block">Kosmetika</button>
+          <button type="button" class="btn btn-default btn-md btn-block">Žaislai</button>
+          <button type="button" class="btn btn-default btn-md btn-block">Paslaugos</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingTwo">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Gamintojas</a>
+      </h4>
+    </div>
+    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+      <div class="panel-body">
+        <div class="btn-group">
+          <button type="button" class="btn btn-default btn-md btn-block">Dell</button>
+          <button type="button" class="btn btn-default btn-md btn-block">Asus</button>
+          <button type="button" class="btn btn-default btn-md btn-block">Levi's</button>
+          <button type="button" class="btn btn-default btn-md btn-block">Apple</button>
+          <button type="button" class="btn btn-default btn-md btn-block">Zara</button>
+          <button type="button" class="btn btn-default btn-md btn-block">Reserved</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingThree">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Kaina</a>
+      </h4>
+    </div>
+    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+      <div class="panel-body">
+        <div class="btn-group">
+          <button type="button" class="btn btn-default btn-md btn-block">0-10 EUR</button>
+          <button type="button" class="btn btn-default btn-md btn-block">10-50 EUR</button>
+          <button type="button" class="btn btn-default btn-md btn-block">50-100 EUR</button>
+          <button type="button" class="btn btn-default btn-md btn-block">100-200 EUR</button>
+          <button type="button" class="btn btn-default btn-md btn-block">200-500 EUR</button>
+          <button type="button" class="btn btn-default btn-md btn-block">500+ EUR</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingFour">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Lokacija</a>
+      </h4>
+    </div>
+    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+      <div class="panel-body">
+        <div class="btn-group">
+          <button type="button" class="btn btn-default btn-md btn-block">0-50 metrų</button>
+          <button type="button" class="btn btn-default btn-md btn-block">50-100 metrų</button>
+          <button type="button" class="btn btn-default btn-md btn-block">100-200 metrų</button>
+          <button type="button" class="btn btn-default btn-md btn-block">200-500 metrų</button>
+          <button type="button" class="btn btn-default btn-md btn-block">500-1000 metrų</button>
+          <button type="button" class="btn btn-default btn-md btn-block">1000+ metrų</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
