--- a/reviews.html
+++ b/reviews.html
@@ -110,8 +110,12 @@
 
     </div>
     <div class="footer x--bt">
-        <div class="btn btn-primary btn-lg full-width" id="load_home">
-            Pridėti atsiliepimą
+
+        <div class="btn-group" role="group" aria-label="Atgal">
+            <div class="btn btn-primary btn-lg inline-block" id="load_home">
+                Pridėti atsiliepimą
+            </div>
+            <div class="btn btn-default btn-lg inline-block" onclick="window.history.back();">« Atgal</div>
         </div>
     </div>
     <!-- /.container -->
