Results window somewhat finished.

--- a/results-window.html
+++ b/results-window.html
@@ -25,7 +25,7 @@
 		</div>
 		<div>
   			<ul class="nav nav-tabs" role="tablist">
-    			<li role="presentation" class="active">
+    			<li role="presentation" class="active filter-tab">
     				<a href="#home" role="tab" data-toggle="tab">Kainą</a>
     			</li>
     			<li role="presentation">
@@ -40,19 +40,195 @@
 			    <div role="tabpanel" class="tab-pane active" id="home">
 			    	<div class="container ">
 			    		<div class="row shop-row">
-			    			<div class="col-xs-6">Zara</div>
-			    			<div class="col-xs-6">
+			    			<div class="col-xs-6 name">Zara</div>
+			    			<div class="col-xs-6 rating">
 			    				<span class="glyphicon glyphicon-star"></span>
 			    				<span class="glyphicon glyphicon-star"></span>
 			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    			</div>
+			    		</div>
+			    		<div class="row shop-row">
+			    			<div class="col-xs-6 name">H&amp;M</div>
+			    			<div class="col-xs-6 rating">
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    			</div>
+			    		</div>
+			    		<div class="row shop-row">
+			    			<div class="col-xs-6 name">Apranga</div>
+			    			<div class="col-xs-6 rating">
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    			</div>
+			    		</div>
+			    		<div class="row shop-row">
+			    			<div class="col-xs-6 name">Promod</div>
+			    			<div class="col-xs-6 rating">
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    			</div>
+			    		</div>
+			    		<div class="row shop-row">
+			    			<div class="col-xs-6 name">Reserved</div>
+			    			<div class="col-xs-6 rating">
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    			</div>
+			    		</div>
+			    		<div class="row shop-row">
+			    			<div class="col-xs-6 name">Stradivarius</div>
+			    			<div class="col-xs-6 rating">
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
 			    				<span class="glyphicon glyphicon-star-empty"></span>
 			    				<span class="glyphicon glyphicon-star-empty"></span>
 			    			</div>
 			    		</div>
 			    	</div>
 			    </div>
-			    <div role="tabpanel" class="tab-pane" id="profile">...</div>
-			    <div role="tabpanel" class="tab-pane" id="messages">...</div>
+			    <div role="tabpanel" class="tab-pane" id="profile">
+			    	<div class="container ">
+			    		<div class="row shop-row">
+			    			<div class="col-xs-6 name">H&amp;M</div>
+			    			<div class="col-xs-6 rating">
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    			</div>
+			    		</div>
+			    		<div class="row shop-row">
+			    			<div class="col-xs-6 name">Zara</div>
+			    			<div class="col-xs-6 rating">
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    			</div>
+			    		</div>
+			    		<div class="row shop-row">
+			    			<div class="col-xs-6 name">Stradivarius</div>
+			    			<div class="col-xs-6 rating">
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    			</div>
+			    		</div>
+			    		<div class="row shop-row">
+			    			<div class="col-xs-6 name">Apranga</div>
+			    			<div class="col-xs-6 rating">
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    			</div>
+			    		</div>
+			    		<div class="row shop-row">
+			    			<div class="col-xs-6 name">Promod</div>
+			    			<div class="col-xs-6 rating">
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    			</div>
+			    		</div>
+			    		<div class="row shop-row">
+			    			<div class="col-xs-6 name">Reserved</div>
+			    			<div class="col-xs-6 rating">
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    			</div>
+			    		</div>
+			    	</div>
+			    </div>
+			    <div role="tabpanel" class="tab-pane" id="messages">
+			    	<div class="container ">
+			    		<div class="row shop-row">
+			    			<div class="col-xs-6 name">Reserved</div>
+			    			<div class="col-xs-6 rating">
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    			</div>
+			    		</div>
+			    		<div class="row shop-row">
+			    			<div class="col-xs-6 name">Zara</div>
+			    			<div class="col-xs-6 rating">
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    			</div>
+			    		</div>
+			    		<div class="row shop-row">
+			    			<div class="col-xs-6 name">Apranga</div>
+			    			<div class="col-xs-6 rating">
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    			</div>
+			    		</div>
+			    		<div class="row shop-row">
+			    			<div class="col-xs-6 name">Promod</div>
+			    			<div class="col-xs-6 rating">
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    			</div>
+			    		</div>
+			    		<div class="row shop-row">
+			    			<div class="col-xs-6 name">H&amp;M</div>
+			    			<div class="col-xs-6 rating">
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    			</div>
+			    		</div>
+			    		<div class="row shop-row">
+			    			<div class="col-xs-6 name">Stradivarius</div>
+			    			<div class="col-xs-6 rating">
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    				<span class="glyphicon glyphicon-star-empty"></span>
+			    			</div>
+			    		</div>
+			    	</div>
+			    </div>
 			</div>
 		</div>
 	</div>
