--- a/results-window.html
+++ b/results-window.html
@@ -23,6 +23,10 @@
 		<div class="btn-group" role="group" aria-label="Atgal">
     		<button type="button" class="btn btn-default x--mv">« Atgal</button>
 		</div>
+
+		<h2 class="form-signin-heading">Paieškos rezultatai</h2>
+        <br/>
+
 		<div>
   			<ul class="nav nav-tabs" role="tablist">
     			<li role="presentation" class="active filter-tab">
