--- a/comment-rate.html
+++ b/comment-rate.html
@@ -22,14 +22,12 @@
   <body>
 
     <div class="container">
-        <br/>
-
         <div class="btn-group" role="group" aria-label="Atgal">
-            <button type="button" class="btn btn-default">« Atgal</button>
+            <button type="button" class="btn btn-default x--mv">« Atgal</button>
         </div>
 
         <h2 class="form-signin-heading">Palikite atsiliepimą</h2>
-        <hr/>
+      
 
         <form class="form-horizontal" role="form">
 
