--- a/login.html
+++ b/login.html
@@ -22,10 +22,8 @@
   <body>
 
     <div class="container">
-        <br/>
-
-        <div class="btn-group" role="group" aria-label="Atgal" onclick="window.location.href = 'index.html'">
-            <button type="button" class="btn btn-default">« Atgal</button>
+        <div class="btn-group" role="group" aria-label="Atgal">
+            <button type="button" class="btn btn-default x--mv"  onclick="window.location.href = 'index.html'">« Atgal</button>
         </div>
 
         <form class="form-signin">
