--- a/main-search-window.html
+++ b/main-search-window.html
@@ -17,39 +17,43 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
-</head>
+  </head>
 
-<body>
+  <body>
 
     <div class="container">
-        <h2>Akropolis</h2>
-        <form>
-            <div class="form-group">
-                <input type="text" class="form-control" id="search-keyword" placeholder="Įveskite paieškos frazę...">
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-default full-width x--pv">
-                    Ieškoti
-                </button>
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-default full-width x--pv">
-                    Detali paieška
-                </button>
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-default full-width x--pv">
-                    Žemėlapis
-                </button>
-            </div>
-        </form>
+     <div class="btn-group" role="group" aria-label="Atgal">
+        <button type="button" class="btn btn-default x--mv">« Atgal</button>
     </div>
+    
+    <h2>Akropolis</h2>
+    <form>
+        <div class="form-group">
+            <input type="text" class="form-control" id="search-keyword" placeholder="Įveskite paieškos frazę...">
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-default full-width x--pv">
+                Ieškoti
+            </button>
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-default full-width x--pv">
+                Detali paieška
+            </button>
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-default full-width x--pv">
+                Žemėlapis
+            </button>
+        </div>
+    </form>
+</div>
 
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
