--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     </div>
     <div class="container">
         <div class="x--pv">
-            <div class="btn btn-primary btn-lg full-width x--mb">
+            <div class="btn btn-primary btn-lg full-width x--mb" id="akropolis">
                 PC Akropolis
             </div>
-            <div class="btn btn-primary btn-lg full-width x--mb">
+            <div class="btn btn-primary btn-lg full-width x--mb" id="panorama">
                 Panorama
             </div>
-            <div class="btn btn-primary btn-lg full-width x--mb">
+            <div class="btn btn-primary btn-lg full-width x--mb" id="europa">
                 Europa
             </div>
         </div>
@@ -55,8 +55,16 @@
 
             $(document).ready(function() {
                 $("#load_home").on("click", function() {
-                    window.location.href = "login.html"
+                    window.location.href = "login.html";
                 });
+
+                $("#akropolis").on("click", loadMainPage);
+                $("#panorama").on("click", loadMainPage);
+                $("#europa").on("click", loadMainPage);
+
+                function loadMainPage() {
+                    window.location.href = "main-search-window.html";
+                }
             });
     </script>
 </body>
