Links added to the main search window.

--- a/main-search-window.html
+++ b/main-search-window.html
@@ -23,7 +23,7 @@
 
     <div class="container">
      <div class="btn-group" role="group" aria-label="Atgal">
-        <button type="button" class="btn btn-default x--mv">« Atgal</button>
+        <a type="button" class="btn btn-default x--mv" href="index.html">« Atgal</a>
     </div>
     
     <h2>Akropolis</h2>
@@ -32,19 +32,19 @@
             <input type="text" class="form-control" id="search-keyword" placeholder="Įveskite paieškos frazę...">
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-default full-width x--pv">
+            <a href="results-window.html" type="submit" class="btn btn-default full-width x--pv">
                 Ieškoti
-            </button>
+            </a>
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-default full-width x--pv">
+            <a href="detailed-search.html" type="submit" class="btn btn-default full-width x--pv">
                 Detali paieška
-            </button>
+            </a>
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-default full-width x--pv">
+            <a href="navigate.html" type="submit" class="btn btn-default full-width x--pv">
                 Žemėlapis
-            </button>
+            </a>
         </div>
     </form>
 </div>
