--- a/results-window.html
+++ b/results-window.html
@@ -21,7 +21,9 @@
 <body>
 	<div class="container">
 		<div class="btn-group" role="group" aria-label="Atgal">
-    		<button type="button" class="btn btn-default x--mv">« Atgal</button>
+    		<a type="button" class="btn btn-default x--mv" href="main-search-window.html">
+    			« Atgal
+    		</a>
 		</div>
 
 		<h2 class="form-signin-heading">Paieškos rezultatai</h2>
