padding on atgal

--- a/comment-rate.html
+++ b/comment-rate.html
@@ -22,21 +22,21 @@
   <body>
 
     <div class="container">
-        <div class="btn-group" role="group" aria-label="Atgal">
+        <div class="btn-group x--pt" role="group" aria-label="Atgal">
             <button type="button" class="btn btn-default x--mv">« Atgal</button>
         </div>
 
         <h2 class="form-signin-heading">Palikite atsiliepimą</h2>
-      
+
 
         <form class="form-horizontal" role="form">
 
-            <label for="message" class="sr-only">Komentaro tekstas</label>    
+            <label for="message" class="sr-only">Komentaro tekstas</label>
             <textarea class="form-control" rows="4" name="message" placeholder="Komentaro tekstas"></textarea>
 
             <br/>
 
-            <label for="name" class="sr-only">Jūsų vardas</label>         
+            <label for="name" class="sr-only">Jūsų vardas</label>
             <input type="text" class="form-control" id="name" name="name" placeholder="Jūsų vardas" value="">
 
             <br/>
