--- a/main-search-window.html
+++ b/main-search-window.html
@@ -22,10 +22,10 @@
   <body>
 
     <div class="container">
-     <div class="btn-group" role="group" aria-label="Atgal">
+     <div class="btn-grou x--pt" role="group" aria-label="Atgal">
         <button type="button" class="btn btn-default x--mv">« Atgal</button>
     </div>
-    
+
     <h2>Akropolis</h2>
     <form>
         <div class="form-group">
