--- a/detailed-search.html
+++ b/detailed-search.html
@@ -21,7 +21,7 @@
 
     <body>
       <div class="container">
-        <div class="btn-group" role="group" aria-label="Atgal">
+        <div class="btn-group x--pt" role="group" aria-label="Atgal">
           <button type="button" class="btn btn-default x--mv">« Atgal</button>
         </div>
         <h2>Detali paieška</h2>
