--- a/navigate.html
+++ b/navigate.html
@@ -21,13 +21,13 @@
 
 <body>
 
-    <div class="container">
+    <div class="container x--pt">
      <div class="btn-group" role="group" aria-label="Atgal">
         <button type="button" class="btn btn-default x--mv">« Atgal</button>
     </div>
 
     <h2 class="form-signin-heading">Navigacija - Akropolis</h2>
-  
+
 
     <div class="flexible-container">
 
