--- a/results-window.html
+++ b/results-window.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-	<div class="container">
+	<div class="container x--pt">
 		<div class="btn-group" role="group" aria-label="Atgal">
     		<button type="button" class="btn btn-default x--mv">« Atgal</button>
 		</div>
