Added links to detailed search window.

--- a/detailed-search.html
+++ b/detailed-search.html
@@ -22,7 +22,9 @@
     <body>
       <div class="container">
         <div class="btn-group" role="group" aria-label="Atgal">
-          <button type="button" class="btn btn-default x--mv">« Atgal</button>
+          <a type="button" class="btn btn-default x--mv" href="main-search-window.html">
+            « Atgal
+          </a>
         </div>
         <h2>Detali paieška</h2>
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
@@ -35,12 +37,12 @@
             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-default btn-md btn-block">Rūbai</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">Maistas</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">Galanterija</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">Kosmetika</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">Žaislai</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">Paslaugos</button>
+                  <a type="button" href="results-window.html" class="btn btn-default btn-md btn-block">Rūbai</a>
+                  <a type="button" href="results-window.html" class="btn btn-default btn-md btn-block">Maistas</a>
+                  <a type="button" href="results-window.html" class="btn btn-default btn-md btn-block">Galanterija</a>
+                  <a type="button" href="results-window.html" class="btn btn-default btn-md btn-block">Kosmetika</a>
+                  <a type="button" href="results-window.html" class="btn btn-default btn-md btn-block">Žaislai</a>
+                  <a type="button" href="results-window.html" class="btn btn-default btn-md btn-block">Paslaugos</a>
                 </div>
               </div>
             </div>
@@ -54,12 +56,12 @@
             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
               <div class="panel-body">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-default btn-md btn-block">Dell</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">Asus</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">Levi's</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">Apple</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">Zara</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">Reserved</button>
+                  <a href="results-window.html" type="button" class="btn btn-default btn-md btn-block">Dell</a>
+                  <a href="results-window.html" type="button" class="btn btn-default btn-md btn-block">Asus</a>
+                  <a href="results-window.html" type="button" class="btn btn-default btn-md btn-block">Levi's</a>
+                  <a href="results-window.html" type="button" class="btn btn-default btn-md btn-block">Apple</a>
+                  <a href="results-window.html" type="button" class="btn btn-default btn-md btn-block">Zara</a>
+                  <a href="results-window.html" type="button" class="btn btn-default btn-md btn-block">Reserved</a>
                 </div>
               </div>
             </div>
@@ -73,12 +75,12 @@
             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-default btn-md btn-block">0-10 EUR</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">10-50 EUR</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">50-100 EUR</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">100-200 EUR</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">200-500 EUR</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">500+ EUR</button>
+                  <a href="results-window.html" type="button" class="btn btn-default btn-md btn-block">0-10 EUR</a>
+                  <a href="results-window.html" type="button" class="btn btn-default btn-md btn-block">10-50 EUR</a>
+                  <a href="results-window.html" type="button" class="btn btn-default btn-md btn-block">50-100 EUR</a>
+                  <a href="results-window.html" type="button" class="btn btn-default btn-md btn-block">100-200 EUR</a>
+                  <a href="results-window.html" type="button" class="btn btn-default btn-md btn-block">200-500 EUR</a>
+                  <a href="results-window.html" type="button" class="btn btn-default btn-md btn-block">500+ EUR</a>
                 </div>
               </div>
             </div>
@@ -92,12 +94,12 @@
             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-default btn-md btn-block">0-50 metrų</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">50-100 metrų</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">100-200 metrų</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">200-500 metrų</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">500-1000 metrų</button>
-                  <button type="button" class="btn btn-default btn-md btn-block">1000+ metrų</button>
+                  <a type="button" href="results-window.html" class="btn btn-default btn-md btn-block">0-50 metrų</a>
+                  <a type="button" href="results-window.html" class="btn btn-default btn-md btn-block">50-100 metrų</a>
+                  <a type="button" href="results-window.html" class="btn btn-default btn-md btn-block">100-200 metrų</a>
+                  <a type="button" href="results-window.html" class="btn btn-default btn-md btn-block">200-500 metrų</a>
+                  <a type="button" href="results-window.html" class="btn btn-default btn-md btn-block">500-1000 metrų</a>
+                  <a type="button" href="results-window.html" class="btn btn-default btn-md btn-block">1000+ metrų</a>
                 </div>
               </div>
             </div>
