Back link from navigation page.

--- a/navigate.html
+++ b/navigate.html
@@ -23,7 +23,7 @@
 
     <div class="container x--pt">
      <div class="btn-group" role="group" aria-label="Atgal">
-        <button type="button" class="btn btn-default x--mv">« Atgal</button>
+        <a type="button" class="btn btn-default x--mv" href="main-search-window.html">« Atgal</a>
     </div>
 
     <h2 class="form-signin-heading">Navigacija - Akropolis</h2>
