--- a/main-search-window.html
+++ b/main-search-window.html
@@ -21,8 +21,10 @@
 
   <body>
 
-    <div class="container">
-        
+    <div class="container   x--pt">
+         <div class="btn-group" role="group" aria-label="Atgal">
+            <button type="button" class="btn btn-default x--mv"  onclick="window.location.href = 'index.html'">« Atgal</button>
+        </div>
 
     <h2>Akropolis</h2>
     <form>
