--- a/detailed-search.html
+++ b/detailed-search.html
@@ -20,7 +20,7 @@
     </head>
 
     <body>
-      <div class="container">
+      <div class="container  x--pt">
         
           
           <a type="button" class="btn btn-default x--mv" href="main-search-window.html">
