--- a/feedback.html
+++ b/feedback.html
@@ -25,7 +25,7 @@
             <div class="col-md-12">
 
                 <div class="btn-group x--pt" role="group" aria-label="Atgal">
-                    <button type="button" class="btn btn-default x--mv">« Atgal</button>
+                    <a href="results-window.html" type="button" class="btn btn-default x--mv">« Atgal</a>
                 </div>
                 <h2 class="">Atsiliepimai</h2>
                 <div class="container x--p">
