--- a/main-search-window.html
+++ b/main-search-window.html
@@ -21,10 +21,11 @@
 
   <body>
 
-    <div class="container   x--pt">
-         <div class="btn-group" role="group" aria-label="Atgal">
-            <button type="button" class="btn btn-default x--mv"  onclick="window.location.href = 'index.html'">« Atgal</button>
-        </div>
+    <div class="container">
+
+     <div class="btn-group  x--pt" role="group" aria-label="Atgal">
+        <a type="button" class="btn btn-default x--mv" href="index.html">« Atgal</a>
+    </div>
 
     <h2>Akropolis</h2>
     <form>
