doing mokey jab

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </head>
 
 <body>
-    <div class="header x--bb x--ph">
-        Yzy Shop
+    <div class="header x--ph">
+        <h2 class="">Yzy Shop</h2>
     </div>
     <div class="container">
         <div class="x--pv">
@@ -39,7 +39,7 @@
 
 
     </div>
-    <div class="footer x--bt">
+    <div class="footer">
         <div class="btn btn-success btn-lg full-width" id="load_home">
             Prisijungimas
         </div>
