--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 
 <body>
     <div class="header x--ph">
-        <h2 class="">Yzy Shop</h2>
+        <div class="h2 pull-left" style=" margin-top:12px !important">Yzy Shop</div>
+        <div class="btn-group x--pt pull-right" role="group" aria-label="Atgal">
+            <button type="button" class="btn btn-default ">Prisijungti</button>
+        </div>
     </div>
     <div class="container">
         <div class="x--pv">
@@ -40,9 +43,7 @@
 
     </div>
     <div class="footer">
-        <div class="btn btn-success btn-lg full-width" id="load_home">
-            Prisijungimas
-        </div>
+        
     </div>
     <!-- /.container -->
 
